--- a/public/style.css
+++ b/public/style.css
@@ -1,46 +1,16 @@
+/* the 'body' selector is required for the tests to pass */
+/* You can change the style attributes if you want */
 body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  color: #222;
-  background-color: #fff;
+  background-color: #222;
+  color: #ddd;
   text-align: center;
-  line-height: 1.4em;
+  font-family: sans-serif;
 }
 
-main {
-  padding: 0;
-  margin-top: 40px;
+h1 {
+  font-size: 4em;
 }
 
-h3 {
-  margin-top: 30px;
-}
-
-
-
-.user-stories li {
-  margin-bottom: 1em;
-}
-
-a {
-  color: #2574a9;
-}
-
-form {
-  margin: 10px auto;
-  padding: 20px;
-  max-width: 600px;
-}
-
-label {
-  margin-right: 10px;
-}
-
-input {
-  padding: 5px;
-}
-
-input[type='text'] {
-  width: 220px;
-  text-align: center;
+input[type=text], label {
+  margin-bottom: 8px;
 }
